--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,1 +1,6 @@
+<app-drawer></app-drawer>
+<main class="m-auto grow flex flex-col min-h-screen pt-16">
 <router-outlet></router-outlet>
+</main>
+<app-app-footer></app-app-footer>
+<app-back-to-top></app-back-to-top>
